[package]
name = "libmep"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.7.3"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
log = "0.4.14"
glob = "0.3.0"
