[package]
name = "mep_sdl2_input"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libmep = { path = "../../libmep" }
log = "0.4.14"
sdl2 = { version = "0.35.2", features = ["bundled"] }

[lib]
crate-type = ["cdylib"]
